Tue Jun 29 08:50:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/descriptors/run_test.pl:
          Reverted last changes.

Tue Jun 29 08:40:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/descriptors/run_test.pl:

        * tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp:
          Code layout. Catch InvalidStock exception.

        * tutorials/Quoter/Simple/Distributor/StockDistributorDriver.cpp:
          Code layout.

Tue Jun 22 08:37:04 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.cpp
        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender_exec.cpp
        * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.cpp
        * connectors/ami4ccm/tests/SimplexMulti/Sender/UsesSM_Sender_exec.cpp
        * connectors/ami4ccm/tests/UsesMulti/Sender/UsesMulti_Sender_exec.cpp
        * connectors/ami4ccm/tutorials/Hello/Tutorial/02_idl.html
        Cleanup code.

Mon Jun 28 23:55:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:

          Additional documentation, and added a temporary property to trigger
          best effort deployment.

        * DAnCE/DAnCE/DAnCE_Utility.h:
        * DAnCE/DAnCE/DAnCE_Utility.cpp:

          New specialization for extracting boolean values from property
          sequences.

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Added code to optionally enable best effort deployment semantics,
          controlled by --best-effort to the NodeManager at startup.

        * NEWS:

          Updates.

Mon Jun 28 19:53:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
